@@ -73,6 +73,11 @@
 		test.istrue(table.contains(result, "folder/ok.lua"))
 		test.isfalse(table.contains(result, "folder/ok.lua.2"))
 	end
+	
+	function suite.matchfiles_OnLeadingDotSlashWithPath()
+		local result = os.matchfiles("./folder/*.lua")
+		test.istrue(table.contains(result, "folder/ok.lua"))
+	end
 
 
 	
