@@ -21,6 +21,7 @@
 * Patch 3063804: Set CompileAs flag for VS200x C projects (rjmyst3)
 * Implemented StaticRuntime flag for Xcode (William Burnson)
 * Improved portability of Mac OS X binaries (William Burnson)
+* Bug 3035545: The pattern { "./folder/*.c" } matches no files
 
 
 -------
